--- a/.env
+++ b/.env
@@ -30,7 +30,7 @@ LOCALHOST_URL=http://127.0.0.1:8000/
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
- DATABASE_URL="mysql://root:new_password@127.0.0.1:3306/lillydoo?serverVersion=5.7&charset=utf8mb4"
+ DATABASE_URL="mysql://root:new_password@127.0.0.1:3306/phonebook?serverVersion=5.7&charset=utf8mb4"
 #DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
